src/views/homepage/homepage.scss
@use '@/styles/variables.scss' as var;
@use '@/styles/animation.scss' as animation;
@use '@/styles/layout.scss' as layout;
@use '@/styles/transition.scss' as t;

.home {
  @include layout.flex-col-center;
  position: relative;
  width: 100%;
  height: auto;

  .bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-position: center;
    background-size: cover;
    background-image: url("@/../public/homepage-bg.png");
    background-attachment: fixed;
  }

  .intro-container {
    @include layout.flex-col-around;
    position: relative;
    width: 100%;
    height: calc(100vh - 50px);

    .intro-up {
      @include animation.animate(fadeIn, 2000ms, ease-in, forwards);
      visibility: hidden;
      position: relative;
      width: auto;
      height: auto;
      font-size: var.$font-size-lg;
      text-align: center;
      text-transform: capitalize;
      letter-spacing: .2em;
      user-select: none;
    }

    .intro-down {
      @include layout.flex-row-center;
      flex-wrap: wrap;
      position: relative;
      width: 80%;
      height: auto;
      text-align: center;
      user-select: none;

      .name-1,
      .name-2 {
        @include layout.flex-row-evenly;
        flex: 1;
        flex-wrap: nowrap;
      }
    }

    .scroll-btn-container {
      @include layout.flex-row-evenly;
      @include animation.animate(fadeInBottom, 2000ms, ease, forwards);
      visibility: hidden;
      position: relative;
      flex-wrap: wrap;
      width: max(300px, 30%);
      height: 50px;
      font-size: 20px;
      user-select: none;
    }
  }

  .about-container,
  .work-container,
  .contact-container {
    @include layout.flex-row-center;
    position: relative;
    width: 100%;
    height: var.$homepage-height;
    overflow: hidden;

    .about, .work, .contact {
      @include t.transition((opacity, top));
      position: relative;
      display: none;
      width: 80%;
      height: calc(var.$homepage-height - 10%);
      padding-bottom: 10%;

      .title {
        width: 100%;
      }

      .about-details, .work-details, .contact-details {
        @include animation.animate(fadeInTop, 500ms, ease, forwards, 500ms);
        visibility: hidden;
        position: relative;
        width: 100%;
        height: 300px;
      }
    }
    
    &.show {
      .about, .work, .contact {
        @include layout.flex-col-evenly;
      }
    }

    &.hidden {
      .about, .work, .contact {
        opacity: 0;
      }
    }
  }
}

